# weekly-planner

./: .env.example  .gitignore  README.md  Report.md  cli.py  docker-compose.yml  main.py  pyproject.toml  run_evals.py  run_langfuse_eval.py  run_local_evals.py  server.py
.claude/: settings.local.json
agent/: agent.py  config.py  memory.py  scheduler.py  system_prompt.txt  tools.py
api/: memory.py  models.py  scheduler.py  tools.py
docs/: architecture.md
eval_data/: README.md  __init__.py  dataset.py  metrics.py  schemas.py  visualize.py
evals/: config.py  eval_data.py  eval_runner.py  llm_judge.py  push_to_langfuse.py  test_cases.py
impl/: auth.py  memory.py  postgres_memory.py  scheduler.py  tools.py  weather.py
static/: index.html
tests/: test_eval_config.py  test_memory.py  test_metrics.py  test_models.py  test_scheduler.py  test_schemas.py
