[project]
name = "weekly-planner"
version = "0.1.0"
description = "Conversational AI agent for weekly task planning"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.102.0",
    "bcrypt>=4.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "langfuse>=2.18.0,<3.0",
    "pydantic>=2.0",
    "pyjwt>=2.8.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.34.0",
]
